AIX build failure after upgrade pipewire to 1.3.81

XMLWordPrintable

    • b11

        Filed as separate issue to keep the upgrade PR clean of it.
        Fix is the same as in the src/java.desktop/unix/native/libpipewire/include/spa/param/audio/raw.h part of the JDK-8309703

        --- a/src/java.desktop/unix/native/libpipewire/include/spa/param/audio/raw.h
        +++ b/src/java.desktop/unix/native/libpipewire/include/spa/param/audio/raw.h
        @@ -11,7 +11,15 @@ extern "C" {

        #include <stdint.h>

        -#include <spa/utils/endian.h>
        +#if !defined(__FreeBSD__) && !defined(__MidnightBSD__) && !defined(AIX)
        +#include <endian.h>
        +#endif
        +
        +#if defined(AIX)
        +#include <sys/machine.h>
        +#define __BIG_ENDIAN BIG_ENDIAN
        +#define __BYTE_ORDER BIG_ENDIAN
        +#endif

        /**
         * \addtogroup spa_param

              Assignee:
              Alexander Zvegintsev
              Reporter:
              Alexander Zvegintsev
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

                Created:
                Updated:
                Resolved: