8349751: AIX build failure after upgrade pipewire to 1.3.81