src/java.desktop/unix/native/libpipewire/include/spa/param/audio/raw.h
@@ -11,7 +11,15 @@ extern "C" {
 
 #include <stdint.h>
 
+#if !defined(AIX)
 #include <spa/utils/endian.h>
+#endif
+
+#if defined(AIX)
+#include <sys/machine.h>
+#define __BIG_ENDIAN      BIG_ENDIAN
+#define __BYTE_ORDER      BIG_ENDIAN
+#endif
 
 /**
  * \addtogroup spa_param
